Added log stats to the api spec
